<resources>
    <string name="app_name">Corona Tracker</string>
    <string name="united_states">United States</string>
    <string name="search_country">Search Country</string>
    <string name="country">Country</string>
    <string name="cases">Cases</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="active">Active</string>
    <string name="covid_19_in_the_world">Covid-19 in the World</string>
    <string name="welcome">Welcome</string>
    <string name="corona_tracker">Corona Tracker</string>
    <string name="corona_map">Corona Map</string>
    <string name="created_by_group_15">Created by Group 15</string>
    <string name="vaccinated_numbers">Vaccinated Numbers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">Read more</string>
    <string name="dashboard">Dashboard</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="info">Info</string>
    <string name="sort_image">sort_image</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="gmail">Gmail</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="search_hint">Search...</string>
    <string name="please_wait">Please Wait...</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No Account Yet? Create One!</string>
    <string name="family_name">Family name</string>
    <string name="phone_number">Phone number</string>
    <string name="corona_help_title_1">How to fight corona virus?</string>

    <string name="corona_do_the_five">Wash your hands regularly for 20 seconds, with soap and water or alcohol-based hand rub.
    \n\nCover your nose and mouth with a disposable tissue or flexed elbow when you cough or sneeze.
    \n\nAvoid close contact (1 meter or 3 feet) with people who are unwell.
    \n\nDon\'t touch your eyes, nose, or mouth if your hands are not clean.
    \n\nStay home and self-isolate from others in the household if you feel unwell.</string>

    //Information About Corona
    <string name="corona_info_title">Novel COVID-19 (Corona) Virus</string>

    <string name="corona_info_one">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.
        \n\nMost people infected with the COVID-19 virus will experience mild to moderate respiratory illness and
        recover without requiring special treatment.  Older people, and those with underlying medical
        problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are
        more likely to develop serious illness.
        \n\nThe best way to prevent and slow down transmission is be well
        informed about the COVID-19 virus, the
        disease it causes and how it spreads. Protect yourself and others from infection by washing
        your hands or using an alcohol based rub frequently and not touching your face.
        </string>

    <string name="corona_info_three">
        The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose
        when an infected person coughs or sneezes, so it’s important that you also practice respiratory
        etiquette (for example, by coughing into a flexed elbow).
        \n\nAt this time, there are no specific vaccines or treatments for
        COVID-19. However, there are many ongoing clinical trials evaluating potential treatments.
        WHO will continue to provide updated
        information as soon as clinical findings become available.</string>

    <string name="image_credit">Image Credit Ecohealth Alliance</string>
    <string name="corona_symptoms_title">Symptoms</string>
    <string name="corona_symptoms_info">The most common symptoms of COVID-19 are fever, tiredness,
        and dry cough. Some patients may have aches and pains, nasal congestion, runny nose, sore
        throat or diarrhea. These symptoms are usually mild and begin gradually. Some people become
        infected but don’t develop any symptoms and don\'t feel unwell.People with fever, cough and difficulty breathing
        should seek medical attention.</string>

    <string name="corona_info_credit">NOTE : All information shown here has been taken from WHO\'s official website.
    Refer to the links below for more information on Corona virus.</string>

    <string name="corona_more_info">WHO Corona Virus Outbreak :\n<a href="https://www.who.int/health-topics/coronavirus">https://www.who.int/health-topics/coronavirus</a>
    \n\nWHO Corona Q&amp;A :\n<a href="https://www.who.int/news-room/q-a-detail/q-a-coronaviruses">https://www.who.int/news-room/q-a-detail/q-a-coronaviruses</a></string>

    <string name="learn_more_text">Learn More About Corona Virus</string>
    <string name="helpline_number_text">India Helpline Numbers</string>
    <string name="save_information">Save information</string>

</resources>