<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DashboardFragment">

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:letterSpacing="0.01"
            android:text="@string/welcome"
            android:textColor="@color/prim_dark"
            android:textSize="25sp"
            android:textStyle="bold" />

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_vertical"-->
<!--            android:src="@drawable/coronavirus" />-->

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutHeader"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/covidTracker"
            android:background="@drawable/edit_text_background"
            android:padding="8dp"
            android:elevation="4dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:src="@drawable/research"
                tools:layout_editor_absoluteX="33dp"
                tools:layout_editor_absoluteY="248dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/corona_tracker"
                android:textColor="#223263"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"/>

        </TableRow>

        <TableRow
            android:id="@+id/covidMap"
            android:background="@drawable/edit_text_background"
            android:padding="8dp"
            android:elevation="4dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:src="@drawable/placeholder"
                tools:layout_editor_absoluteX="33dp"
                tools:layout_editor_absoluteY="248dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/corona_map"
                android:textSize="20sp"
                android:textColor="#223263"
                android:fontFamily="@font/poppins"/>

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/updateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="700dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/created_by_group_15"
        android:textColor="#7E7E7E" />

</RelativeLayout>