<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountryFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/apptheme"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <!--            app:menu="@menu/main_menu"-->


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:maxLines="1"
                    android:text="Country Lists"
                    android:textColor="@color/prim_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/bar"
        android:background="@color/white"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shapebgsearch"
            android:clickable="true"
            android:focusable="true"
            app:defaultQueryHint="Type country's name here"
            tools:ignore="RtlCompat" />
    </RelativeLayout>


    <TableLayout
        android:id="@+id/country_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:orientation="horizontal">

        <TableRow android:background="#F5F8FF">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/country"
                android:textColor="@color/prim_dark"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"/>

            <LinearLayout
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/cases_ascended"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_up" />

                    <ImageView
                        android:id="@+id/cases_descended"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_down" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/cases"
                    android:textColor="@color/prim_dark"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/recovered_ascended"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_up" />

                    <ImageView
                        android:id="@+id/recovered_descended"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_down" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/recovered"
                    android:textColor="@color/prim_dark"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/deaths_ascended"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_up" />

                    <ImageView
                        android:id="@+id/deaths_descended"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_down" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/deaths"
                    android:textColor="@color/prim_dark"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins"/>

            </LinearLayout>

            <!--            <TextView-->
            <!--                android:layout_width="45dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="1"-->
            <!--                android:gravity="center_horizontal"-->
            <!--                android:padding="10sp"-->
            <!--                android:text="@string/cases"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textSize="12sp" />-->

            <!--            <TextView-->
            <!--                android:layout_width="45dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="2"-->
            <!--                android:gravity="center_horizontal"-->
            <!--                android:padding="10sp"-->
            <!--                android:text="@string/recovered"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textSize="12sp" />-->

            <!--            <TextView-->
            <!--                android:layout_width="45dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="2"-->
            <!--                android:gravity="center_horizontal"-->
            <!--                android:padding="10sp"-->
            <!--                android:text="@string/deaths"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textSize="12sp" />-->

        </TableRow>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/countryList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/country_bar"
        android:dividerHeight="0dp"
        android:drawSelectorOnTop="true"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAppearance="?android:textAppearanceMedium" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>
